force-app/main/default/objects/Participant_Survey__c/Participant_Survey__c.object-meta.xml
<CustomObject>
    <label>Participant Survey</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Participant Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>