force-app/main/default/objects/Participant_Survey__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>