force-app/main/default/objects/Participant_Survey__c/fields/Participant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Participant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Surveys</relationshipLabel>
    <relationshipName>Participant_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>