force-app/main/default/objects/Participant_Survey__c/fields/Participant_Study_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Study_Enrollment__c</fullName>
    <label>Participant Study Enrollment</label>
    <referenceTo>Participant_Study_Enrollment__c</referenceTo>
    <relationshipLabel>Participant Surveys</relationshipLabel>
    <relationshipName>Participant_Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>