force-app/main/default/objects/Participant_Survey__c/fields/Show_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Date__c</fullName>
    <label>Show date</label>
    <type>Date</type>
</CustomField>