force-app/main/default/objects/Participant_Survey__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <referenceTo>Survey</referenceTo>
    <relationshipLabel>Participant Surveys</relationshipLabel>
    <relationshipName>Participant_Surveys</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>